--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mr/mr_tinypng",
+  "name": "scarbous/mr_tinypng",
   "description": "",
   "type": "typo3-cms-extension",
   "keywords": [
